syntax = "proto2";

package DB.Protos.AutoStats;

option cc_generic_services = true;
import "cnch_common.proto";

enum TaskStatus {
    NotExists = 1;
    Created = 2;
    Pending = 3;
    Running = 4;
    Error = 5;
    Failed = 6;
    Success = 7;
    Cancelled = 8;
}

enum TaskType {
    Manual = 1;
    Auto = 2;
}

message TaskInfoCore
{
    required UUID task_uuid = 1;
    required TaskType task_type = 2;
    required StorageID storage_id = 11;
    repeated string columns_name = 4;
    required string settings_json = 5;
    required uint64 stats_row_count = 6;
    required uint64 udi_count = 7;
    required double priority = 8;
    required uint64 retry_times = 9;
    required TaskStatus status = 10;
}
